--- a/pro_jsf/WebContent/WEB-INF/web.xml
+++ b/pro_jsf/WebContent/WEB-INF/web.xml
@@ -23,4 +23,19 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+    
+    <filter>
+        <filter-name>MyFacesExtensionsFilter</filter-name>
+        <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
+            <init-param>
+        <param-name>uploadMaxFileSize</param-name>
+        <param-value>100m</param-value>
+    </init-param>
+    </filter>
+
+	<filter-mapping>
+	    <filter-name>MyFacesExtensionsFilter</filter-name>
+	    <servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
+
 </web-app>
