--- a/pro_jsf/WebContent/WEB-INF/web.xml
+++ b/pro_jsf/WebContent/WEB-INF/web.xml
@@ -10,6 +10,11 @@
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
+ <multipart-config>
+      <max-file-size>52428800</max-file-size>
+      <max-request-size>52428800</max-request-size>
+      <file-size-threshold>204800</file-size-threshold>
+    </multipart-config>   
     </servlet>
     
     <context-param>
